...
        return Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            ListTile(
              leading: const Icon(Icons.phone),
              title: const Text('Add Manually'),
              key: ValueKey('addFriendManually'),
              onTap: () {
                Navigator.pop(
                    context); //close modal bottom sheet before navigating
                Navigator.push(
                  context,
                  PageRouteBuilder(
...
                _loadData();
              },
            ),
            ListTile(
              leading: const Icon(Icons.contacts),
              title: const Text('Add from Contacts'),
              key: ValueKey('addFriendFromContacts'),
              onTap: () {
                Navigator.pop(
                    context); //close modal bottom sheet before navigating
                pickContact();
              },
            ),
...
        ],
        child: FloatingActionButton(
          onPressed: () {
            _showAddFriendOptions(context);
          },
          backgroundColor: Colors.blue,
          key: ValueKey('addFriendOptionsButton'),
          child: const Icon(
            Icons.person_add,
            color: Colors.white,
          ),
        ),
      ),
...
