...
                              builder: (context) => PledgedGiftsPage(
                                event: widget.event,
                                friend: widget.friend,
                              ),
                            ));
                          },
                          key: ValueKey('viewPledgedGiftsButton'),
                          child: const Text(
                            "View Pledged Gifts",
                            style: TextStyle(color: Colors.white),
                          ),
                        ),
                      ),
...
                                                        backgroundColor:
                                                            gift.isPledged
                                                                ? Colors.red
                                                                : Colors.blue,
                                                      ),
                                                      key: ValueKey(
                                                          'pledgingGiftsButton'),
                                                      child: Text(
                                                        gift.isPledged
                                                            ? 'Un-pledge'
                                                            : 'Pledge',
                                                        style: const TextStyle(
                                                          color: Colors.white,
...
